[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycubrid"
version = "1.4.0"
description = "Pure Python DB-API 2.0 driver for CUBRID database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Yeongseon Choe", email = "yeongseon.choe@gmail.com"},
    {name = "Gyeongjun Paik", email = "paikend@gmail.com"},
]
keywords = ["CUBRID", "database", "driver", "DB-API", "PEP 249"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov",
    "ruff==0.15.12",
    "mypy==2.1.0",
    "bandit[toml]==1.9.4",
    "pre-commit",
    "tox",
]

[project.urls]
Homepage = "https://github.com/cubrid-lab/pycubrid"
Repository = "https://github.com/cubrid-lab/pycubrid"
Documentation = "https://github.com/cubrid-lab/pycubrid/tree/main/docs"
Issues = "https://github.com/cubrid-lab/pycubrid/issues"

[tool.setuptools]
packages = ["pycubrid", "pycubrid.aio"]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["pycubrid"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["pycubrid"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb native -v -r fxX --maxfail=25 -p no:warnings"
python_files = "tests/*test_*.py"
